--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.18.0",
+    "element-ui": "^2.15.1",
+    "less": "^4.1.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -27,6 +29,8 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "element-theme": "^2.0.1",
+    "element-theme-chalk": "^2.3.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
