--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.15.1",
     "less": "^4.1.1",
+    "lodash": "^4.17.21",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
