--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.15.1",
+    "install": "^0.13.0",
     "less": "^4.1.1",
     "lodash": "^4.17.21",
+    "markdown-it": "^12.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
